--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,18 @@
 {
-  "name": "Casa Mía",
-  "short_name": "Casa Mía",
+  "name": "Casa Mia",
+  "short_name": "Casa Mia",
   "start_url": "./",
   "display": "standalone",
-  "background_color": "#8BC34A",
-  "theme_color": "#8BC34A",
+  "background_color": "#A8E063",
+  "theme_color": "#A8E063",
   "icons": [
     {
-      "src": "icono.png",
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
